# Google-Scholar-Scraper

./: .editorconfig  .gitattributes  .gitignore  GScholarScraper.py  README.md  example.csv  example_query_file.csv  pyproject.toml  requirements.txt
src/google_scholar_scraper/: __main__.py  config.py  main.py  utils.py
src/google_scholar_scraper/crossref_query/: crossref_query.py
src/google_scholar_scraper/serp_query/: __init__.py  serp_query.py
